--- a/advisory_committee.html
+++ b/advisory_committee.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="jiit.png" type="image/png">
-    <title>Committee - ICHSM 2026</title>
+    <title>Advisory Committee - ICHSM 2026</title>
     
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
@@ -207,8 +207,8 @@
                             ICHSM Team
                         </a>
                         <ul class="dropdown-menu" aria-labelledby="ichsmTeamDropdown">
-                            <li><a class="dropdown-item active" href="committee.html">Organizing Committee</a></li>
-                            <li><a class="dropdown-item" href="advisory_committee.html">Advisory Committee</a></li>
+                            <li><a class="dropdown-item" href="committee.html">Organizing Committee</a></li>
+                            <li><a class="dropdown-item active" href="advisory_committee.html">Advisory Committee</a></li>
                         </ul>
                     </li>
                     <li class="nav-item">
@@ -225,142 +225,22 @@
     <!-- Main Content -->
     <section class="committee-section">
         <div class="container">
-            <h2 class="section-title" data-aos="fade-up">Organizing Committee</h2>
-            
-            <!-- Conference Committee Cards with Images and Grouped by Designation (Compact & Responsive) -->
+            <h2 class="section-title" data-aos="fade-up">Advisory Committee</h2>
+            <!-- You can update the content below to reflect the actual Advisory Committee members -->
             <div class="container">
-                <!-- Chief Patrons -->
-                <h3 class="mb-3 mt-4 text-center">Chief Patrons</h3>
                 <div class="row justify-content-center mb-3">
                     <div class="col-6 col-md-3 mb-3">
                         <div class="card h-100 text-center p-2">
-                            <img src="images/chief1.png" class="rounded-circle mx-auto mt-2" alt="Shri Jaiprakash Gaur Ji" style="width:90px; height:90px; object-fit:contain; background:#fff;">
+                            <img src="images/advisory1.png" class="rounded-circle mx-auto mt-2" alt="Advisory Member" style="width:90px; height:90px; object-fit:contain; background:#fff;">
                             <div class="card-body p-2">
-                                <h6 class="card-title mb-1" style="font-size:1rem;">Shri Jaiprakash Gaur Ji</h6>
-                                <div class="text-muted" style="font-size:0.9rem;">Founder Chancellor, JIIT</div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-6 col-md-3 mb-3">
-                        <div class="card h-100 text-center p-2">
-                            <img src="images/chief2.jpg" class="rounded-circle mx-auto mt-2" alt="Shri Manoj Gaur Ji" style="width:90px; height:90px; object-fit:contain; background:#fff;">
-                            <div class="card-body p-2">
-                                <h6 class="card-title mb-1" style="font-size:1rem;">Shri Manoj Gaur Ji</h6>
-                                <div class="text-muted" style="font-size:0.9rem;">Executive Chairman, Jaypee Group</div>
+                                <h6 class="card-title mb-1" style="font-size:1rem;">Prof. Santishree Dhulipudi Pandit</h6>
+                                <div class="text-muted" style="font-size:0.9rem;">Vice Chancellor</div>
+                                <div class="text-muted" style="font-size:0.9rem;">Jawaharlal Nehru University</div>
                             </div>
                         </div>
                     </div>
                 </div>
-                <!-- Patrons -->
-                <h3 class="mb-3 mt-4 text-center">Patrons</h3>
-                <div class="row justify-content-center mb-3">
-                    <div class="col-6 col-md-3 mb-3">
-                        <div class="card h-100 text-center p-2">
-                            <img src="images/patron1.jpg" class="rounded-circle mx-auto mt-2" alt="Prof. S.C. Saxena" style="width:90px; height:90px; object-fit:contain; background:#fff;">
-                            <div class="card-body p-2">
-                                <h6 class="card-title mb-1" style="font-size:1rem;">Prof. S.C. Saxena</h6>
-                                <div class="text-muted" style="font-size:0.9rem;">Pro Chancellor, JIIT</div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-6 col-md-3 mb-3">
-                        <div class="card h-100 text-center p-2">
-                            <img src="images/patron2.jpg" class="rounded-circle mx-auto mt-2" alt="Prof. Bodh Raj Mehta" style="width:90px; height:90px; object-fit:contain; background:#fff;">
-                            <div class="card-body p-2">
-                                <h6 class="card-title mb-1" style="font-size:1rem;">Prof. Bodh Raj Mehta</h6>
-                                <div class="text-muted" style="font-size:0.9rem;">Vice Chancellor, JIIT</div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <!-- Conference Chair -->
-                <h3 class="mb-3 mt-4 text-center">Conference Chair</h3>
-                <div class="row justify-content-center mb-3">
-                    <div class="col-6 col-md-3 mb-3">
-                        <div class="card h-100 text-center p-2">
-                            <img src="images/conference_chair.png" class="rounded-circle mx-auto mt-2" alt="Prof. Monika Suri" style="width:90px; height:90px; object-fit:contain; background:#fff;">
-                            <div class="card-body p-2">
-                                <h6 class="card-title mb-1" style="font-size:1rem;">Prof. Monika Suri</h6>
-                                <div class="text-muted" style="font-size:0.9rem;">Dean & HOD, HSS</div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <!-- Convenors -->
-                <h3 class="mb-3 mt-4 text-center">Convenors</h3>
-                <div class="row justify-content-center mb-3">
-                    <div class="col-6 col-md-3 mb-3">
-                        <div class="card h-100 text-center p-2">
-                            <img src="images/convenor1.png" class="rounded-circle mx-auto mt-2" alt="Prof. Mukta Mani" style="width:90px; height:90px; object-fit:contain; background:#fff;">
-                            <div class="card-body p-2">
-                                <h6 class="card-title mb-1" style="font-size:1rem;">Prof. Mukta Mani</h6>
-                                <div class="text-muted" style="font-size:0.9rem;">Professor</div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-6 col-md-3 mb-3">
-                        <div class="card h-100 text-center p-2">
-                            <img src="images/convenor2.png" class="rounded-circle mx-auto mt-2" alt="Dr. Monali Bhattacharya" style="width:90px; height:90px; object-fit:contain; background:#fff;">
-                            <div class="card-body p-2">
-                                <h6 class="card-title mb-1" style="font-size:1rem;">Dr. Monali Bhattacharya</h6>
-                                <div class="text-muted" style="font-size:0.9rem;">ASSOCIATE PROFESSOR, HSS & ASSOCIATE DEAN (IQAC)                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <!-- Co-Convenors -->
-                <h3 class="mb-3 mt-4 text-center">Co-Convenors</h3>
-                <div class="row justify-content-center mb-3">
-                    <div class="col-6 col-md-3 mb-3">
-                        <div class="card h-100 text-center p-2">
-                            <img src="images/coconvenor1.png" class="rounded-circle mx-auto mt-2" alt="Dr. Kanupriya Misra Bakhru" style="width:90px; height:90px; object-fit:contain; background:#fff;">
-                            <div class="card-body p-2">
-                                <h6 class="card-title mb-1" style="font-size:1rem;">Dr. Kanupriya Misra Bakhru</h6>
-                                <div class="text-muted" style="font-size:0.9rem;">Associate Professor</div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-6 col-md-3 mb-3">
-                        <div class="card h-100 text-center p-2">
-                            <img src="images/coconvenor2.png" class="rounded-circle mx-auto mt-2" alt="Dr. Manas Ranjan Behera" style="width:90px; height:90px; object-fit:contain; background:#fff;">
-                            <div class="card-body p-2">
-                                <h6 class="card-title mb-1" style="font-size:1rem;">Dr. Manas Ranjan Behera</h6>
-                                <div class="text-muted" style="font-size:0.9rem;">Assistant Professor (Grade-II)                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <!-- Organising Secretaries -->
-                <h3 class="mb-3 mt-4 text-center">Organising Secretaries</h3>
-                <div class="row justify-content-center mb-3">
-                    <div class="col-6 col-md-3 mb-3">
-                        <div class="card h-100 text-center p-2">
-                            <img src="images/secretary1.png" class="rounded-circle mx-auto mt-2" alt="Dr. Harleen Kaur" style="width:90px; height:90px; object-fit:contain; background:#fff;">
-                            <div class="card-body p-2">
-                                <h6 class="card-title mb-1" style="font-size:1rem;">Dr. Harleen Kaur</h6>
-                                <div class="text-muted" style="font-size:0.9rem;">Assistant Professor (Senior Grade)</div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-6 col-md-3 mb-3">
-                        <div class="card h-100 text-center p-2">
-                            <img src="images/secretary2.png" class="rounded-circle mx-auto mt-2" alt="Dr. Amandeep Kaur" style="width:90px; height:90px; object-fit:contain; background:#fff;">
-                            <div class="card-body p-2">
-                                <h6 class="card-title mb-1" style="font-size:1rem;">Dr. Amandeep Kaur</h6>
-                                <div class="text-muted" style="font-size:0.9rem;">Assistant Professor (Grade-II)</div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-6 col-md-3 mb-3">
-                        <div class="card h-100 text-center p-2">
-                            <img src="images/secretary3.png" class="rounded-circle mx-auto mt-2" alt="Dr. Purwa Srivastava" style="width:90px; height:90px; object-fit:contain; background:#fff;">
-                            <div class="card-body p-2">
-                                <h6 class="card-title mb-1" style="font-size:1rem;">Dr. Purwa Srivastava</h6>
-                                <div class="text-muted" style="font-size:0.9rem;">Assistant Professor (Grade-II)</div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
+                <!-- Add more advisory committee members as needed -->
             </div>
         </div>
     </section>
@@ -426,4 +306,4 @@
         });
     </script>
 </body>
-</html> 
+</html>
