advisory committe update

--- a/advisory_committee.html
+++ b/advisory_committee.html
@@ -223,27 +223,100 @@
     </nav>
 
     <!-- Main Content -->
-    <section class="committee-section">
-        <div class="container">
-            <h2 class="section-title" data-aos="fade-up">Advisory Committee</h2>
-            <!-- You can update the content below to reflect the actual Advisory Committee members -->
-            <div class="container">
-                <div class="row justify-content-center mb-3">
-                    <div class="col-6 col-md-3 mb-3">
-                        <div class="card h-100 text-center p-2">
-                            <img src="images/advisory1.png" class="rounded-circle mx-auto mt-2" alt="Advisory Member" style="width:90px; height:90px; object-fit:contain; background:#fff;">
-                            <div class="card-body p-2">
-                                <h6 class="card-title mb-1" style="font-size:1rem;">Prof. Santishree Dhulipudi Pandit</h6>
-                                <div class="text-muted" style="font-size:0.9rem;">Vice Chancellor</div>
-                                <div class="text-muted" style="font-size:0.9rem;">Jawaharlal Nehru University</div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <!-- Add more advisory committee members as needed -->
-            </div>
+    <section style="background: #e8f3fe; padding: 3rem 0;">
+  <div class="container">
+    <h2 class="fw-bold text-center mb-4" style="color:#202861; font-size:2.1rem;">Advisory Committee</h2>
+    <div class="row justify-content-center g-4">
+
+      <!-- Profile Card 1 -->
+      <div class="col-12 col-md-4 d-flex justify-content-center">
+        <div class="card shadow-sm border-0" style="border-radius:16px; width:100%; max-width:320px;">
+          <div class="card-body text-center">
+            <img src="images/advisory1.png"
+                 class="rounded-circle mb-3"
+                 style="width:86px; height:86px; object-fit:cover; border:3px solid #a2bcec;"
+                 alt="Prof Vijay Kumar Nangia">
+            <div style="font-weight:600; color:#233459; font-size:1.07rem;">Prof. Vijay Kumar Nangia</div>
+            <div style="color:#4862ae; font-size:0.98rem;">Professor of Eminence at GNDU-Amritsar & M.Tech Faculty, IIT Roorkee</div>
+          </div>
         </div>
-    </section>
+      </div>
+      <!-- Profile Card 2 -->
+      <div class="col-12 col-md-4 d-flex justify-content-center">
+        <div class="card shadow-sm border-0" style="border-radius:16px; width:100%; max-width:320px;">
+          <div class="card-body text-center">
+            <img src="images/advisory2.png"
+                 class="rounded-circle mb-3"
+                 style="width:86px; height:86px; object-fit:cover; border:3px solid #a2bcec;"
+                 alt="Shri Manoj Gaur Ji">
+            <div style="font-weight:600; color:#233459; font-size:1.07rem;">Prof. Amit Kumar Singh</div>
+            <div style="color:#4862ae; font-size:0.98rem;">Dept. of Commerce, Delhi School of
+Economics, University of Delhi</div>
+          </div>
+        </div>
+      </div>
+      <!-- Profile Card 3 -->
+      <div class="col-12 col-md-4 d-flex justify-content-center">
+        <div class="card shadow-sm border-0" style="border-radius:16px; width:100%; max-width:320px;">
+          <div class="card-body text-center">
+            <img src="images/advisory3.png"
+                 class="rounded-circle mb-3"
+                 style="width:86px; height:86px; object-fit:cover; border:3px solid #a2bcec;"
+                 alt="Shri Third Person">
+            <div style="font-weight:600; color:#233459; font-size:1.07rem;">Dr. Chitrakalpa Sen</div>
+            <div style="color:#4862ae; font-size:0.98rem;">Head of Economics,University of Northampton India</div>
+          </div>
+        </div>
+      </div>
+      <div class="col-12 col-md-4 d-flex justify-content-center">
+        <div class="card shadow-sm border-0" style="border-radius:16px; width:100%; max-width:320px;">
+          <div class="card-body text-center">
+            <img src="images/advisory4.png"
+                 class="rounded-circle mb-3"
+                 style="width:86px; height:86px; object-fit:cover; border:3px solid #a2bcec;"
+                 alt="Shri Third Person">
+            <div style="font-weight:600; color:#233459; font-size:1.07rem;">Prof. Nirmala Mani Adhikary</div>
+            <div style="color:#4862ae; font-size:0.98rem;">HOD Dept. of Language and Mass Communication, Kathmandu University School of Arts</div>
+          </div>
+        </div>
+      </div>
+      <div class="col-12 col-md-4 d-flex justify-content-center">
+        <div class="card shadow-sm border-0" style="border-radius:16px; width:100%; max-width:320px;">
+          <div class="card-body text-center">
+            <img src="images/advisory5.png"
+                 class="rounded-circle mb-3"
+                 style="width:86px; height:86px; object-fit:cover; border:3px solid #a2bcec;"
+                 alt="Shri Third Person">
+            <div style="font-weight:600; color:#233459; font-size:1.07rem;">Prof. Sudhir K. Jain</div>
+            <div style="color:#4862ae; font-size:0.98rem;">Adjunct Professor I.I.M Jammu & MNIT Jaipur </div>
+          </div>
+        </div>
+      </div>
+      <div class="col-12 col-md-4 d-flex justify-content-center">
+        <div class="card shadow-sm border-0" style="border-radius:16px; width:100%; max-width:320px;">
+          <div class="card-body text-center">
+            <img src="images/advisory6.png"
+                 class="rounded-circle mb-3"
+                 style="width:86px; height:86px; object-fit:cover; border:3px solid #a2bcec;"
+                 alt="Shri Third Person">
+            <div style="font-weight:600; color:#233459; font-size:1.07rem;">Prof. Neelam Saran Gaur</div>
+            <div style="color:#4862ae; font-size:0.98rem;">Sahitya Akademi Award Winner Writer and Retd Prof, Dept of English and MEL, Allahabad University</div>
+          </div>
+        </div>
+      </div>
+
+      <!-- 
+        To replicate: Copy any <div class="col-12 col-md-4 ...">...</div> block below
+        and update the image, name, and designation for each new profile.
+        This layout automatically displays 3 cards per row on desktop, 1 per row on mobile.
+      -->
+
+    </div>
+  </div>
+</section>
+
+
+      
 
     <!-- Footer -->
     <footer style="background: #021828; color: #fff; padding: 1.5rem 0 1rem;">
