--- a/advisory_committee.html
+++ b/advisory_committee.html
@@ -237,7 +237,7 @@
                  style="width:86px; height:86px; object-fit:cover; border:3px solid #a2bcec;"
                  alt="Prof Vijay Kumar Nangia">
             <div style="font-weight:600; color:#233459; font-size:1.07rem;">Prof. Vijay Kumar Nangia</div>
-            <div style="color:#4862ae; font-size:0.98rem;">Professor of Eminence at GNDU-Amritsar & M.Tech Faculty, IIT Roorkee</div>
+            <div style="color:#4862ae; font-size:0.98rem;">Retd. Professor and Head, Dept. Of Management Studies, IIT Roorkee, Professor Emeritus NSUT, BML Munjal University and GNDU</div>
           </div>
         </div>
       </div>
@@ -304,6 +304,7 @@ Economics, University of Delhi</div>
           </div>
         </div>
       </div>
+      
 
       <!-- 
         To replicate: Copy any <div class="col-12 col-md-4 ...">...</div> block below
