--- a/advisory_committee.html
+++ b/advisory_committee.html
@@ -304,6 +304,31 @@ Economics, University of Delhi</div>
           </div>
         </div>
       </div>
+      <div class="col-12 col-md-4 d-flex justify-content-center">
+        <div class="card shadow-sm border-0" style="border-radius:16px; width:100%; max-width:320px;">
+          <div class="card-body text-center">
+            <img src="images/advisory7.png"
+                 class="rounded-circle mb-3"
+                 style="width:86px; height:86px; object-fit:cover; border:3px solid #a2bcec;"
+                 alt="Shri Third Person">
+            <div style="font-weight:600; color:#233459; font-size:1.07rem;">Prof. V. Ganeshan</div>
+            <div style="color:#4862ae; font-size:0.98rem;">Former Vice Chancellor, CIEFL University</div>
+          </div>
+        </div>
+      </div>
+      <div class="col-12 col-md-4 d-flex justify-content-center">
+        <div class="card shadow-sm border-0" style="border-radius:16px; width:100%; max-width:320px;">
+          <div class="card-body text-center">
+            <img src="images/advisory8.png"
+                 class="rounded-circle mb-3"
+                 style="width:86px; height:86px; object-fit:cover; border:3px solid #a2bcec;"
+                 alt="Shri Third Person">
+            <div style="font-weight:600; color:#233459; font-size:1.07rem;">Prof. Dr. Hebatallah Adam</div>
+            <div style="color:#4862ae; font-size:0.98rem;">Visionary Academic & Economist Professor of Economics</div>
+          </div>
+        </div>
+      </div>
+      
       
 
       <!-- 
