--- a/advisory_committee.html
+++ b/advisory_committee.html
@@ -324,7 +324,8 @@ Economics, University of Delhi</div>
                  style="width:86px; height:86px; object-fit:cover; border:3px solid #a2bcec;"
                  alt="Shri Third Person">
             <div style="font-weight:600; color:#233459; font-size:1.07rem;">Prof. Dr. Hebatallah Adam</div>
-            <div style="color:#4862ae; font-size:0.98rem;">Visionary Academic & Economist Professor of Economics</div>
+            <div style="color:#4862ae; font-size:0.98rem;">Visionary Academic & Economist Professor of Economics | Associate Dean (Doctoral Studies), O.P. Jindal Global University.
+</div>
           </div>
         </div>
       </div>
