--- a/advisory_committee.html
+++ b/advisory_committee.html
@@ -288,7 +288,8 @@ Economics, University of Delhi</div>
                  style="width:86px; height:86px; object-fit:cover; border:3px solid #a2bcec;"
                  alt="Shri Third Person">
             <div style="font-weight:600; color:#233459; font-size:1.07rem;">Prof. Sudhir K. Jain</div>
-            <div style="color:#4862ae; font-size:0.98rem;">Adjunct Professor I.I.M Jammu & MNIT Jaipur </div>
+            <div style="color:#4862ae; font-size:0.98rem;">Adjunct Professor IIM Jammu & Former Vice Chancellor Shri Mata Vaishno Devi University
+            </div>
           </div>
         </div>
       </div>
