--- a/advisory_committee.html
+++ b/advisory_committee.html
@@ -306,7 +306,7 @@ Economics, University of Delhi</div>
                  class="rounded-circle mb-3"
                  style="width:86px; height:86px; object-fit:cover; border:3px solid #a2bcec;"
                  alt="Shri Third Person">
-            <div style="font-weight:600; color:#233459; font-size:1.07rem;">Dr K Elango</div>
+            <div style="font-weight:600; color:#233459; font-size:1.07rem;">Dr. K Elango</div>
             <div style="color:#4862ae; font-size:0.98rem;">Chief Executive Chair, English Language Teachers’ Association of India
             </div>
           </div>
@@ -360,7 +360,7 @@ Economics, University of Delhi</div>
                  class="rounded-circle mb-3"
                  style="width:86px; height:86px; object-fit:cover; border:3px solid #a2bcec;"
                  alt="Shri Third Person">
-            <div style="font-weight:600; color:#233459; font-size:1.07rem;">Dr Szarmilaa Dewie Krishnan</div>
+            <div style="font-weight:600; color:#233459; font-size:1.07rem;">Dr. Szarmilaa Dewie Krishnan</div>
             <div style="color:#4862ae; font-size:0.98rem;">English Language Teaching Centre, Ministry of Education, Malaysia</div>
           </div>
         </div>
