--- a/advisory_committee.html
+++ b/advisory_committee.html
@@ -267,7 +267,7 @@ Economics, University of Delhi</div>
                  style="width:86px; height:86px; object-fit:cover; border:3px solid #a2bcec;"
                  alt="Shri Third Person">
             <div style="font-weight:600; color:#233459; font-size:1.07rem;">Dr. Chitrakalpa Sen</div>
-            <div style="color:#4862ae; font-size:0.98rem;">Head of Economics,University of Southampton India</div>
+            <div style="color:#4862ae; font-size:0.98rem;">Head of Economics, University of Southampton Delhi</div>
           </div>
         </div>
       </div>
