--- a/advisory_committee.html
+++ b/advisory_committee.html
@@ -210,6 +210,7 @@
                             <li><a class="dropdown-item" href="committee.html">Organizing Committee</a></li>
                             <li><a class="dropdown-item active" href="advisory_committee.html">Advisory Committee</a></li>
                             <li><a class="dropdown-item" href="inst_organizing.html">Internal Organizing Committee</a></li>
+                            <li><a class="dropdown-item" href="student_org.html">Student’s Organizing Team</a></li>
                             
                             
 
